# mandos

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  SECURITY.md  codemeta.json  environment.yml  pyproject.toml  readthedocs.yml  tox.ini
.github/workflows/: checks.yml  commit.yml  publish.yml  pull-test.yml  push-main.yml
chembler/: __init__.py
docs/: analysis.rst  api.rst  binding.rst  conf.py  docs_check.py  index.rst  install.rst  literature.rst  misc.rst  preprocessing.rst  requirements.txt  searches.rst  settings.rst  sync.py  taxa.rst  traversal.rst  tutorial.rst
docs/_templates/: custom-module-template.rst
filterchembl/: __init__.py  api.py  cli.py  model.py  settings.py  utils.py
mandos/: __init__.py  activity.py  activity_search.py  acts.py  api.py  atc_search.py  atcs.py  chembl_api.py  cli.py  commands.py  docs.py  drugbank_api.py  find.py  knowledge.py  mechanism_search.py  mechanisms.py  model.py  pubchem_api.py  run.py  settings.py  targets.py  taxonomy.py  utils.py
mandos/analysis/: __init__.py  _plot_utils.py  _regression.py  concordance.py  corr_plots.py  distances.py  enrichment.py  filtration.py  io_defns.py  plots.py  prepping.py  projection.py  regression.py  reification.py
mandos/entries/: __init__.py  _entry_args.py  _entry_utils.py  abstract_entries.py  api_singletons.py  args.py  common_args.py  docs.py  entries.py  filler.py  multi_searches.py  paths.py  searcher.py
mandos/entry/: __init__.py  _arg_utils.py  _common_args.py  _entry_args.py  _entry_utils.py  abstract_entries.py  api_singletons.py  calc_commands.py  docs.py  entry_commands.py  fillers.py  misc_commands.py  multi_searches.py  paths.py  plot_commands.py  searchers.py
mandos/entry/tools/: docs.py  fillers.py  multi_searches.py  paths.py  searchers.py
mandos/entry/utils/: _arg_utils.py  _common_args.py  _entry_args.py
mandos/model/: __init__.py  api.py  atc_codes.py  caches.py  caching_pubchem_api.py  chembl_api.py  concrete_hits.py  correlation_math.py  db.py  hit_dfs.py  hits.py  hmdb_api.py  knowledge.py  mappings.py  pubchem_api.py  pubchem_data.py  pubchem_support.py  query_utils.py  querying_pubchem_api.py  scrape.py  search_caches.py  searches.py  settings.py  targets.py  taxonomy.py  taxonomy_caches.py  utils.py
mandos/model/apis/: __init__.py  caching_pubchem_api.py  chembl_api.py  chembl_scrape_api.py  g2p_api.py  g2p_data.py  hmdb_api.py  pubchem_api.py  pubchem_similarity_api.py  querying_pubchem_api.py  similarity_api.py
mandos/model/chembl_support/: __init__.py  chembl_target_graphs.py  chembl_targets.py  chembl_utils.py
mandos/model/pubchem_support/: _nav.py  _nav_fns.py  pubchem_data.py  pubchem_models.py
mandos/model/utils/: __init__.py  fancy_logger.py  globals.py  hit_utils.py  mappings.py  misc_utils.py  rdkit_utils.py  reflection_utils.py  resources.py  scrape.py  setup.py  sources.py
mandos/resources/: allowed_utf_blocks.txt  args_example.toml  default_settings.json  filtration_example.toml  hazards.json  hazards.tab  hazards.toml  hazards.yml  knowledge.json  knowledge.toml  knowledge.yml  nt650.toml  pubchem_urls.json  schema.sql  simple_nlp.toml  simple_nlp.yml  strategy_4.txt  strings.json  target_patterns.txt  updown.json  updown.yml
mandos/resources/mappings/: @chembl_activities.flexwf  @chembl_activities.regexes  @drugbank_activities.flexwf  @drugbank_activities.regexes  @pubchem_bioactivity_keywords.flexwf  @targets.regexes  @targets_neuro.flexwf  @targets_neuro.regexes
mandos/resources/strategies/: @group_family.strat  @group_smart_all.strat  @group_smart_family1.strat  @group_smart_nofamily.strat  @group_smart_nosel.strat  @group_smart_nosel_family1.strat  @group_smart_nosel_nofamily.strat  @group_stupid_all.strat  @group_stupid_nosel.strat  @null.strat  @split_flex.strat  @split_strict.strat  @split_sweep_flex.strat  @split_sweep_strict.strat  group_all.strat  group_family.strat  group_smart.txt  split_flexible.strat  split_strict.strat  split_sweep_flexible.txt  split_sweep_strict.strat  strategy_0.txt  strategy_1.txt  strategy_2.txt
mandos/resources/viz/: example.mplstyle  page_dims.json  palettes.json  style_override.json
mandos/search/: activity_search.py  api_singletons.py  atc_search.py  entries.py  go_search.py  indication_search.py  mechanism_search.py  multi_searches.py  protein_search.py  searcher.py  target_traversal_strategy.py
mandos/search/chembl/: __init__.py  _activity_search.py  _protein_search.py  activity_search.py  atc_search.py  binding_search.py  functional_search.py  go_search.py  indication_search.py  mechanism_search.py  protein_search.py  target_prediction_search.py  target_predictions.py  target_traversal.py  target_traversal_strategy.py
mandos/search/g2p/: __init__.py  g2p_interaction_search.py
mandos/search/hmdb/: __init__.py  tissue_concentration_search.py
mandos/search/meta/: __init__.py  random_search.py
mandos/search/pubchem/: __init__.py  acute_effects_search.py  bioactivity_search.py  computed_property_search.py  cooccurrence_search.py  ctd_gene_search.py  dgidb_search.py  disease_search.py  drugbank_ddi_search.py  drugbank_interaction_search.py  pubchem_searches.py  trials_search.py
tests/: __init__.py  conftest.py  test_activity.py  test_api.py  test_atcs.py  test_chembl_api.py  test_cli.py  test_find.py  test_init.py  test_model.py  test_pubchem_api.py  test_taxonomy.py
tests/analysis/: test_defns.py  test_prep.py
tests/model/: __init__.py  test_api.py  test_chembl_api.py  test_correlation_math.py  test_hits.py  test_mappings.py  test_pubchem_api.py  test_query_utils.py  test_settings.py  test_targets.py  test_targets_real_data.py  test_taxonomy.py
tests/model/apis/: test_g2p_api.py  (+2 more)
tests/resources/: inchis-atc.csv  inchis-atc.triples.txt  inchis.txt  settings.toml  shortform-matrix.csv
tests/search/: __init__.py  test_activity_search.py  test_atc_search.py  test_go_search.py  test_indication_search.py  test_mechanism_search.py  test_prediction_search.py  test_traversal_strategy.py
(+28 files in other folders)
