[metadata]
description-file = "README.md"

[build-system]
# virtualenv 20.0.34 partly breaks pre-commit under conda
# https://github.com/ContinuumIO/anaconda-issues/issues/12094
# Poetry uses pip and setuptools (although they're not included as dependencies)
# We don't need to list wheel here, but setting a min vr can avoid generating inferior wheels
requires = ["poetry>=1.1,<2", "virtualenv==20.0.33", "wheel>=0.36,<1.0"]
build-backend = "poetry.masonry.api"


#########################################################################################
# Tyrannosaurus
#########################################################################################

[tool.tyrannosaurus.options]
align = true

[tool.tyrannosaurus.sources]
status             = "'Development'"
date               = "'${today}'"
copyright          = "'Copyright 2020–2021'"
version            = "tool.poetry.version"
release            = "tool.poetry.version"
pyversions         = "tool.poetry.dependencies"
devdeps            = "tool.poetry.dev-dependencies"
linelength         = "tool.black.line-length"
authors = [
    "Douglas Myers-Turnbull <github:dmyersturnbull,orcid:0000-0003-3610-4808>",
]
maintainers = "tool.tyrannosaurus.sources.authors"

[tool.tyrannosuarus.paths]
recipe             = "'recipes/${name}/meta.yml'"
environment        = "'environment.yml'"

[tool.tyrannosaurus.targets]
pyproject    = true
init         = true
tox          = true
docs         = true
recipes      = true
environment  = true
license      = true
authors      = true
github       = true
travis       = true
dockerfile   = true
readme       = true
changelog    = true
citation     = true
codemeta     = true


#########################################################################################
# Poetry metadata
#########################################################################################

[tool.poetry]
name = "mandos"
version = "0.2.0"
description = "Get the biological targets of compounds."
include = [
    "README.md",
    "LICENSE.txt",
    "CHANGES.md"
]
authors = ["Douglas Myers-Turnbull"]
maintainers = ["Douglas Myers-Turnbull"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["cheminformatics", "chembl", "pubchem"]
homepage = "https://github.com/dmyersturnbull/mandos"
repository = "https://github.com/dmyersturnbull/mandos"
documentation = "https://mandos-chem.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
	"Intended Audience :: Science/Research",
	"Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
	'Typing :: Typed'
]

[tool.poetry.urls]
CI = "https://github.com/dmyersturnbull/mandos/actions"
Issues = "https://github.com/dmyersturnbull/mandos/issues"
Download = "https://pypi.org/project/mandos/"


#########################################################################################
# Poetry build & dependencies
#########################################################################################

[tool.poetry.scripts]
mandos = "mandos.cli:cli"


[tool.poetry.dependencies]
python                         = ">=3.9, <4"
chembl-webresource-client      = "^0.10"
pandas                         = ">=1.2, <2.0"
numpy                          = ">=1.19, <2.0"
requests                       = ">=2.24, <3.0"
tomlkit                        = ">=0.7, <1.0"
typer                          = ">=0.3, <1.0"
orjson                         = ">=3.4, <4.0"
pocketutils                    = ">=0.4, <0.5"
typeddfs                       = ">=0.4, <0.5"


[tool.poetry.dev-dependencies]
pre-commit               = ">=2.9, <3.0"
pre-commit-hooks         = ">=3.4, <4.0"
bandit                   = ">=1.7, <2.0"
black                    = {git = "https://github.com/psf/black.git", rev="f07832eac44e"}
pytest                   = "^6"
coverage                 = {extras = ["toml"], version = "^5"}
pytest-cov               = "^2"
flake8                   = "^3"
flake8-docstrings        = "^1"
flake8-bugbear           = "^20"
sphinx                   = "^3"
sphinx-autoapi           = "^1"
sphinx-rtd-theme         = ">=0.5, <1.0"
sphinxcontrib-mermaid    = ">=0.5, <1.0"


[tool.poetry.extras]
dev = [
    "pre-commit", "pre-commit-hooks",
    "black", "bandit",
    "pytest", "coverage", "pytest-cov",
    "flake8", "flake8-docstrings", "flake8-bugbear",
    "sphinx", "sphinx-autoapi"
]


#########################################################################################
# Style checking
#########################################################################################

[tool.coverage.paths]
source = ["mandos"]

[tool.coverage.run]
source = ["mandos"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 100
target-version = ["py38"]

[mypy]
check_untyped_defs = true
strict_optional = true

[tool.pycodestyle]
max-line-length = 100
statistics = true

[tool.pydocstyle]
# 212 and 213 contradict; 203 and 204 contradict; D302 is not relevant in Py3
ignore = ["D203", "D212", "D302"]
