[metadata]
description-file = "README.md"

[build-system]
# virtualenv 20.0.34 partly breaks pre-commit under conda
# https://github.com/ContinuumIO/anaconda-issues/issues/12094
# Poetry uses pip and setuptools (although they're not included as dependencies)
# We don't need to list wheel here, but setting a min vr can avoid generating inferior wheels
requires = ["poetry>=1.1,<2", "virtualenv==20.0.33", "wheel>=0.36,<1.0"]
build-backend = "poetry.masonry.api"



#########################################################################################
# Poetry metadata
#########################################################################################

[tool.poetry]
name = "mandos"
version = "0.2.0"
description = "Get the biological targets of compounds."
authors = ["Douglas Myers-Turnbull"]
maintainers = ["Douglas Myers-Turnbull"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["cheminformatics", "chembl", "pubchem", "drug-discovery"]
homepage = "https://github.com/dmyersturnbull/mandos"
repository = "https://github.com/dmyersturnbull/mandos"
documentation = "https://mandos-chem.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
	"Intended Audience :: Science/Research",
	"Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
	'Typing :: Typed'
]

[tool.poetry.urls]
CI = "https://github.com/dmyersturnbull/mandos/actions"
Issues = "https://github.com/dmyersturnbull/mandos/issues"
Download = "https://pypi.org/project/mandos/"


#########################################################################################
# Poetry build & dependencies
#########################################################################################

[tool.poetry.scripts]
mandos = "mandos.cli:cli"


[tool.poetry.dependencies]
python                         = ">=3.9, <4"
chembl-webresource-client      = "^0.10"
defusedxml                     = ">=0.7, <1.0"
loguru                         = ">=0.5, <1.0"
numpy                          = "^1.21"
orjson                         = "^3.5"
pandas                         = "^1.3"
pocketutils                    = ">=0.5.2, <0.7"
pyarrow                        = "^5.0"
requests                       = "^2.25"
suretime                       = ">=0.1.1, <1.0"
tomlkit                        = ">=0.7, <1.0"
typeddfs                       = {version=">=0.12, <1.0", extras=["feather", "parquet", "excel"]}
typer                          = ">=0.4, <1.0"
click                          = ">=8"
tzdata                         = ">=2021.1"
matplotlib                     = {version="^3.4", optional=true}
pint                           = ">=0.17, <1.0"
regex                          = ">=2021.8"
joblib                         = {version="^1.0", optional=true}
seaborn                        = {version=">=0.11, <1.0", optional=true}
selenium                       = {version="^3", optional=true}
scikit-learn                   = {version=">=0.24, <1.0", optional=true}
umap-learn                     = {version=">=0.5, <1.0", optional=true}

[tool.poetry.extras]
analysis = ["scikit-learn", "umap-learn", "scikit-learn", "joblib"]
plots = ["matplotlib", "seaborn"]
web = ["selenium"]
extras = ["matplotlib", "seaborn", "scikit-learn", "umap-learn", "selenium"]

[tool.poetry.dev-dependencies]
pre-commit               = ">=2.15, <3.0"
pre-commit-hooks         = ">=4.0, <5.0"
bandit                   = ">=1.7, <2.0"
black                    = "==21.8b0"
flake8                   = "^3"
flake8-bugbear           = ">=21"
flake8-docstrings        = "^1"
nbqa                     = "^1.1"
pytest                   = "^6"
coverage                 = {extras = ["toml"], version = "^5"}
pytest-cov               = "^2"
sphinx                   = "^4"
sphinx-copybutton        = ">=0.3, <1.0"
sphinx-rtd-theme         = ">=0.5, <1.0"
sphinxcontrib-mermaid    = ">=0.6, <1.0"
sphinx-autodoc-typehints = ">=1.12, <2.0"


#########################################################################################
# Tyrannosaurus
#########################################################################################

[tool.tyrannosaurus.options]
align = true
sort  = true

[tool.tyrannosaurus.sources]
metavm             = "'ubuntu-20.04'"
metavmbox          = "'ubuntu/focal64'"
pymetaversion      = "'3.9'"
pycompatversions   = "tool.poetry.dependencies"
pytoxversions      = "tool.poetry.dependencies"
status             = "'Development'"
date               = "'${today}'"
copyright          = "'Copyright 2020–2021'"
version            = "tool.poetry.version"
release            = "tool.poetry.version"
devdeps            = "tool.poetry.dev-dependencies"
precommitvr        = "tool.poetry.dev-dependencies"
precommitconfigvr  = "tool.poetry.dev-dependencies"
linelength         = "tool.black.line-length"
authors = [
    "Douglas Myers-Turnbull <github:dmyersturnbull,orcid:0000-0003-3610-4808>",
]
maintainers = "tool.tyrannosaurus.sources.authors"

[tool.tyrannosuarus.paths]
recipe             = "'recipes/${name}/meta.yml'"
environment        = "'environment.yml'"

[tool.tyrannosaurus.targets]
pyproject    = true
init         = true
tox          = true
docs         = true
recipes      = true
environment  = true
license      = true
authors      = true
github       = true
travis       = true
dockerfile   = true
readme       = true
changelog    = true
citation     = true
codemeta     = true


#########################################################################################
# Testing
#########################################################################################

# This will be used in a future version of pytest:
#[tool.pytest]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)7s] %(name)s: %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y%m%d %H:%M:%S"

[tool.coverage.paths]
source = ["mandos"]

[tool.coverage.run]
source = ["mandos"]

[tool.coverage.report]
show_missing = true


#########################################################################################
# Style checking
#########################################################################################

[tool.nbqa.mutate]
black = 1

[tool.nbqa.addopts]
black = ["--extend-ignore=E203"]

[tool.black]
line-length = 100
target-version = ["py39"]

[mypy]
check_untyped_defs = true
strict_optional = true

[tool.pycodestyle]
max-line-length = 100
statistics = true

[tool.pydocstyle]
# 212 and 213 contradict; 203 and 204 contradict; D302 is not relevant in Py3
ignore = ["D203", "D212", "D302"]
